# chess-blunders

./: .gitignore  CLAUDE.md  README.md  SPEC.md  config.yaml  main.py  pyproject.toml  requirements.txt
core/: board_render.py  config.py  db.py  llm.py  pgn_parser.py  puzzles.py
ui/: analyze.py  home.py  patterns.py  settings.py
